# oop

./: README.md
lab1/: action.h  draw_on_scene.cpp  edges.cpp  edges.h  errors.h  lab1.pro  mainwindow.cpp  model_action.cpp  model_action.h  my_stream.cpp  mycontroller.cpp  mycontroller.h  mycontroller.ui  mygraphicview.cpp  point.cpp  point.h  point_arr.cpp  point_arr.h  work.cpp  work.h
lab2/: CMakeLists.txt  base_iterator.h  base_iterator_math.h  base_matrix.h  basematrix.hpp  const_iterator.h  errors.h  main.cpp  matrix.cpp  matrix.h  matrix.hpp  matrix_iterator.h  matrix_iterator_math.h  matrix_math.h
